--- a/test/test.html
+++ b/test/test.html
@@ -7,9 +7,10 @@
 </head>
 <body>
     <div id="test">
-        你好 <span>{{person.name}} {{content}}</span><br>
+        你好 <span>哈哈{{ person.name }} {{content}}</span><br>
         自我介绍： <span>{{person.desc}}</span><br>
-        他人评价： <span>{{content}}</span>
+        他人评价： <span>{{content}}</span><br>
+        list: {{list}}
     </div>
     <script type="module">
         import {Sue} from '../core/index.js'
